--- a/index.html
+++ b/index.html
@@ -10,7 +10,5 @@
     <link rel="manifest" href="/site.webmanifest">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
 </head>
-<body>
-
-</body>
+<body></body>
 </html>
